--- a/scss/style.scss
+++ b/scss/style.scss
@@ -286,14 +286,7 @@
   /* awsome journey start here-------------- */
   
   /* education----------------- */
-  .education
-  {
-   /*  display: none; */
-  }
-  .experience
-  {
-    /* display: none; */
-  }
+ 
   .edu-heading
   {
     display: flex;
@@ -342,7 +335,7 @@
     background-color: #8100ff;
     transition: ease-in-out .3s;
    /*  box-shadow: rgba(144, 0, 255, 0.5) 0px 5px 15px; */
-   .first-degree-course,.first-degree-course-name,.institute,{
+   .first-degree-course,.first-degree-course-name,.institute{
     background-color: #8100ff;
     transition: ease-in-out .3s;
     }
@@ -392,10 +385,7 @@
   
   
   /* my services start here------------------ */
-  .all-services
-  {
-   /*  display: none; */
-  }
+  
   .service-logoandname
   {
     display: flex;
@@ -497,19 +487,8 @@
   
   
   /* recent works start here------------------- */
-  .work1
-  {
-    /* display: none; */
-
-  }
-  .work2
-  {
-    /* display: none; */
-  }
-  .work3
-  {
-    /* display: none; */
-  }
+  
+  
   .work-img-1
   {
     width: 100%;
